--- a/SocialNasahFront/package.json
+++ b/SocialNasahFront/package.json
@@ -9,6 +9,7 @@
   "author": "Felipe Guimarães Ratto",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
